@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.9-7
-Date: 2013-02-12
+Date: 2013-02-14
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
